// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicInput -Input render add custom class name 1`] = `
<div>
  <input
    class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper custom-name css-1pd1cd5"
    placeholder="请输入{{name}}"
    type="text"
    value=""
  />
</div>
`;

exports[`lib/BasicInput -Input render clear icon 1`] = `
<div>
  <span
    class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 css-dev-only-do-not-override-ywkr0o"
  >
    <input
      class="ant-input css-dev-only-do-not-override-ywkr0o"
      placeholder="请输入{{name}}"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        class="ant-input-clear-icon ant-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
          />
        </svg>
      </span>
    </span>
  </span>
</div>
`;

exports[`lib/BasicInput -Input render diff size input 1`] = `
<div>
  <input
    class="ant-input ant-input-lg css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
    placeholder="请输入{{name}}"
    type="text"
    value=""
  />
</div>
`;

exports[`lib/BasicInput -Input render diff size input 2`] = `
<div>
  <input
    class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
    placeholder="请输入{{name}}"
    type="text"
    value=""
  />
</div>
`;

exports[`lib/BasicInput -Input render diff size input 3`] = `
<div>
  <input
    class="ant-input ant-input-sm css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
    placeholder="请输入{{name}}"
    type="text"
    value=""
  />
</div>
`;

exports[`lib/BasicInput -Password render diff size pwd 1`] = `
<div>
  <span
    class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-password-large ant-input-affix-wrapper-lg css-dev-only-do-not-override-txh9fw"
  >
    <input
      class="ant-input ant-input-lg css-dev-only-do-not-override-txh9fw"
      placeholder="请输入{{name}}"
      type="password"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="eye-invisible"
        class="anticon anticon-eye-invisible ant-input-password-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="eye-invisible"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
          />
          <path
            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
          />
        </svg>
      </span>
    </span>
  </span>
</div>
`;

exports[`lib/BasicInput -Password render diff size pwd 2`] = `
<div>
  <span
    class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-password-middle css-dev-only-do-not-override-txh9fw"
  >
    <input
      class="ant-input css-dev-only-do-not-override-txh9fw"
      placeholder="请输入{{name}}"
      type="password"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="eye-invisible"
        class="anticon anticon-eye-invisible ant-input-password-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="eye-invisible"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
          />
          <path
            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
          />
        </svg>
      </span>
    </span>
  </span>
</div>
`;

exports[`lib/BasicInput -Password render diff size pwd 3`] = `
<div>
  <span
    class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-password-small ant-input-affix-wrapper-sm css-dev-only-do-not-override-txh9fw"
  >
    <input
      class="ant-input ant-input-sm css-dev-only-do-not-override-txh9fw"
      placeholder="请输入{{name}}"
      type="password"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="eye-invisible"
        class="anticon anticon-eye-invisible ant-input-password-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="eye-invisible"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
          />
          <path
            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
          />
        </svg>
      </span>
    </span>
  </span>
</div>
`;

exports[`lib/BasicInput -TextArea render diff size textarea 1`] = `
<div>
  <textarea
    class="ant-input ant-input-lg css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
    placeholder="请输入{{name}}"
  />
</div>
`;

exports[`lib/BasicInput -TextArea render diff size textarea 2`] = `
<div>
  <textarea
    class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
    placeholder="请输入{{name}}"
  />
</div>
`;

exports[`lib/BasicInput -TextArea render diff size textarea 3`] = `
<div>
  <textarea
    class="ant-input ant-input-sm css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
    placeholder="请输入{{name}}"
  />
</div>
`;
